tests/paczka1/fuzzy1/62306887.err
Error in line 5: UWVk A902 T98,8
Error in line 1: UWVk A902 42,3
Error in line 2: tou S632 72,4
Error in line 12: QbD4dFd6w9Y S632 86,0
Error in line 14: miUgV4e A774 62,3
Error in line 20: miUgV4e S632 10,4
Error in line 30: UWVk A974 37,8
Error in line 31: TlA A974 19,1
Error in line 21: S632 A902 37,8
